--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
       <div class="sumario reacao">
         <img src="./images/icon-reaction.svg" alt="">
         <span>Reaction</span>
-        <span>80 / 100</span>
+        <span class="notas"><strong>80</strong> / 100</span>
       </div>
       <div class="sumario memoria">
         <img src="./images/icon-memory.svg" alt="">
         <span>Memory</span>
-        <span>92 / 100</span>
+        <span class="notas"><strong>92</strong> / 100</span>
       </div>
       <div class="sumario verbal">
         <img src="./images/icon-verbal.svg" alt="">
         <span>Verbal</span>
-        <span>61 / 100</span>
+        <span class="notas"><strong>61</strong> / 100</span>
       </div>
       <div class="sumario visual">
         <img src="./images/icon-visual.svg" alt="">
         <span>Visual</span>
-        <span>72 / 100</span>
+        <span class="notas"><strong>72</strong> / 100</span>
       </div>
       <button class="botao-continuar">Continue</button>
     </div>
